Give up postprocess, use scraper instead

--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -20,12 +20,15 @@ jobs:
       # Check out the repository so it can read the files inside of it and do other operations
       - name: Check out repo
         uses: actions/checkout@v2
+      # cURL data from the specified URL and overwrite the destination file.
+      # Rely on the Flat Action to check the data in on our behalf
+      - name: Fetch stalls as GeoJSON
+        uses: wei/curl@v1
+        with:
+          args: https://datascapesg-scrapers.netlify.app/.netlify/functions/togeojson?url=https%3A%2F%2Fwww.google.com%2Fmaps%2Fd%2Fkml%3Fmid%3D1XcpTiJpt_O-Rw6Wu8qrtCm_Ek9VUgIDF%26lid%3DWXKp4zvmK6Y%26forcekml%3D1 > stalls.json
       # The Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
-      - name: Fetch stalls
+      - name: Fetch stalls as KML
         uses: githubocto/flat@v2
         with:
           http_url: https://www.google.com/maps/d/kml?mid=1XcpTiJpt_O-Rw6Wu8qrtCm_Ek9VUgIDF&lid=WXKp4zvmK6Y&forcekml=1
           downloaded_filename: stalls.kml
-          postprocess: postprocess.js
-        env:
-          POSTPROCESS_FILENAME: stalls.geojson
